--- a/src/main/resources/static/css/nav.css
+++ b/src/main/resources/static/css/nav.css
@@ -1,4 +1,13 @@
 /* NAV ------------------------------*/
+
+/* nav 모양 잡기 */
+.nav-radius {
+	width: 100%;
+	height: 50px;
+	background-color: var(--white);
+	border-radius: 50px 50px 0 0;
+}
+
 .nav-right-btn {
   display: block;
   width: 31px;
