--- a/src/main/resources/templates/thymeleaf/info/info.html
+++ b/src/main/resources/templates/thymeleaf/info/info.html
@@ -35,7 +35,7 @@
 </head>
 <body>
 	<div th:replace="nav/nav::nav"></div>
-	<div id="info" class="container-fluid mt-4 mb-5">
+	<div id="info" class="container-fluid mt-4 mb-3">
 		<div class="container px-0 pt-4">
 			<div class="row">
 				<div class="col-12">
@@ -139,6 +139,9 @@
 					</div>
 				</div>
 					</div>
+				<div class="col-12 text-end">
+					<a th:href="@{'Event_write'}" class="btn btn-main my-3">글쓰기</a>
+				</div>
 				</div>
 				
 			</div>
