--- a/src/main/resources/templates/thymeleaf/band/bandFeedWrite.html
+++ b/src/main/resources/templates/thymeleaf/band/bandFeedWrite.html
@@ -11,18 +11,57 @@
 <!-- include summernote css/js -->
 <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
-<script src="../js/bandFeedWrite.js"></script>
 <link rel="stylesheet" href="../css/bandFeedWrite.css">
 </head>
 <body>
     <div class="bandFeedWrite_wrapper">
         <div class="bandFeedWrite_form">
-            <form method="post">
+            <form method="get" action="writeFeed">
+            	<input type="hidden" value="${bandUrl}" name="bandUrl" />
                 <textarea id="summernote" name="editordata" rows="100"></textarea>
                 <input type="submit" name="doit" value="글쓰기" />
             </form>
         </div>
     </div>
+    
+    <script>
+    $(document).ready(function() {
+        $('#summernote').summernote({
+           minHeight: 500,             // 최소 높이
+              maxHeight: null,             // 최대 높이
+              focus: true,                  // 에디터 로딩후 포커스를 맞출지 여부
+              lang: "ko-KR",               // 한글 설정
+              spellCheck: false,
+              callbacks: {   //이미지 첨부하는 부분
+                 onImageUpload : function(files) {
+                      uploadSummernoteImageFile(files[0],this);
+                  }
+              }
+        });
+
+        function uploadSummernoteImageFile(file, editor) {
+           var resultUrl;
+           
+           data = new FormData();
+           data.append("file", file);
+           
+           $.ajax({
+              data : data,
+              type : "POST",
+              url : "/uploadSummernoteImageFile",
+              contentType : false,
+              processData : false,
+              success : function(data) {
+                 $(editor).summernote('insertImage', data.url);
+              }
+           });
+           
+        }
+
+     });
+
+        
+    </script>
 </body>
 
 </html>
