--- a/src/main/resources/templates/thymeleaf/band/band_create.html
+++ b/src/main/resources/templates/thymeleaf/band/band_create.html
@@ -17,11 +17,20 @@
                     	<input name="band_admin" type="hidden" value="jjangchang" />
                         <p class="h4 text-center">밴드 대표사진을 설정해주세요.</p>
                         <input name="band_thumnail" class="form-control" type="file" id="formFileMultiple"  onchange="readURL(this);" multiple >
-						<img id="blah" src="http://placehold.it/200" alt="#" class="border" width="200" height="200"/>
-                        <p class="h4 text-center">밴드 이름을 입력해주세요.</p>
-                        <input name="band_name" type="text" class="form-control" placeholder="밴드 이름 입력">
-                        <p class="h4 text-center">밴드 소개글을 입력해주세요.</p>
-                        <textarea name="band_content" class="form-control" placeholder="밴드 소개말과 대표사이트 등을 입력하세요." id="floatingTextarea"></textarea>
+						<img id="blah" src="http://placehold.it/200" alt="#" class="border mb-3" width="200" height="200"/>
+						
+						<div class="form-floating mb-3">
+							<input name="band_name" type="text" class="form-control" id="floatingInput" placeholder="밴드 이름 입력">
+  							<label for="floatingInput">밴드 이름을 입력해주세요.</label>
+						</div>
+                        
+
+						<div class="form-floating">
+							<textarea name="band_content" class="form-control" placeholder="밴드 소개말과 대표사이트 등을 입력하세요."
+								id="floatingTextarea2" style="height: 200px"></textarea>
+							<label for="floatingTextarea2">밴드 소개글을 입력해주세요.</label>
+						</div>
+                        
                         <input type="submit" value="밴드 생성"/>
                     </div>
                 </div>
@@ -34,18 +43,18 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script>
-    function readURL(input) {
-        if (input.files && input.files[0]) {
-            var reader = new FileReader();
-
-            reader.onload = function (e) {
-                $('#blah')
-                    .attr('src', e.target.result);
-            };
-
-            reader.readAsDataURL(input.files[0]);
-        }
-    }
+	    function readURL(input) {
+	        if (input.files && input.files[0]) {
+	            var reader = new FileReader();
+	
+	            reader.onload = function (e) {
+	                $('#blah')
+	                    .attr('src', e.target.result);
+	            };
+	
+	            reader.readAsDataURL(input.files[0]);
+	        }
+	    }
     </script>
 </body>
 </html>
