--- a/src/main/resources/templates/nav/nav.html
+++ b/src/main/resources/templates/nav/nav.html
@@ -6,11 +6,11 @@
   <title>Nav</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  	<link rel="stylesheet" href="css/common.css">
-	<link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/common.css">
+<link rel="stylesheet" href="css/nav.css">
 </head>
 <body>
-<nav class="mt-3 mb-0 navbar navbar-expand-md d-flex justify-content-center sticky-top bg-white" th:fragment="nav">
+<nav class="mt-3 mb-0 navbar navbar-expand-md d-flex justify-content-center sticky-top bg-white shadow-sm" th:fragment="nav">
   <div class="row container-fluid">
     <!-- Logo 좌측 -->
  <a class="col navbar-brand" href="home"> <img src="../img/nav/carrier.jpg" alt="" class="mb-2" style="width: 100px;"></a>
