2024-02-15 | 박검지 | pull 충돌로 인한 commit

--- a/src/main/resources/static/css/search.css
+++ b/src/main/resources/static/css/search.css
@@ -10,23 +10,28 @@
 
 }
 
+.search-box-parent{
+	background: var(--main);
+	border-radius: 50px;
+}
+
 .bg-blur{
     background: #ffffff;
-    /*background: rgba( 255, 255, 255, 0.25 );*/
-    /*box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );*/
-    /*backdrop-filter: blur( 4px );*/
-    /*-webkit-backdrop-filter: blur( 4px );*/
-    /*border-radius: 10px;*/
-    /*border: 1px solid rgba( 255, 255, 255, 0.18 );*/
+    background: rgba( 255, 255, 255, 0.8 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 /* 검색창 수정 */
 #search > input[type="search"]{
     background: #000;
 }
 
-input[type="search" i] {
+.home_search input[type="search" i] {
     width: 100%;
-   /*  padding: 20px 40px; */
+   	padding: 20px 40px;
     border-radius: 50px;
 }
 
