--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -79,6 +79,6 @@ a.indent{
 .form-label{
   color: var(--black);
 }
-input, .form-control {
+/* input, .form-control {
 	color: var(--deepgray);
-}
+} */
