--- a/src/main/resources/templates/thymeleaf/info/info.html
+++ b/src/main/resources/templates/thymeleaf/info/info.html
@@ -15,23 +15,37 @@
 <link rel="stylesheet" href="../css/footer.css">
 
 <!-- 파비콘 영역 -->
-	<link rel="apple-touch-icon" sizes="57x57" href="../img/favicon/apple-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="../img/favicon/apple-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="../img/favicon/apple-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="../img/favicon/apple-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="../img/favicon/apple-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="../img/favicon/apple-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="../img/favicon/apple-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="../img/favicon/apple-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="../img/favicon/apple-icon-180x180.png">
-	<link rel="icon" type="image/png" sizes="192x192" href="../img/favicon/android-icon-192x192.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="../img/favicon/favicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
-	<link rel="manifest" href="/manifest.json">
-	<meta name="msapplication-TileColor" content="#ffffff">
-	<meta name="msapplication-TileImage" content="../img/favicon/ms-icon-144x144.png">
-	<meta name="theme-color" content="#ffffff">
+<link rel="apple-touch-icon" sizes="57x57"
+	href="../img/favicon/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60"
+	href="../img/favicon/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72"
+	href="../img/favicon/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76"
+	href="../img/favicon/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114"
+	href="../img/favicon/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120"
+	href="../img/favicon/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144"
+	href="../img/favicon/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152"
+	href="../img/favicon/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180"
+	href="../img/favicon/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"
+	href="../img/favicon/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32"
+	href="../img/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96"
+	href="../img/favicon/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16"
+	href="../img/favicon/favicon-16x16.png">
+<link rel="manifest" href="/manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage"
+	content="../img/favicon/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
 </head>
 <body>
 	<div th:replace="nav/nav::nav"></div>
@@ -56,79 +70,88 @@
 					</div>
 					<hr>
 					<div class="board row">
-							<!--board-->
-								<div class="row " th:each = "list:${list}">
-								<a  th:href="@{'Event_view?id='+ ${list.getEvent_num()}}" class="row">
-									<div class="col-3 board-left">
-										<img  th:src="@{'../img/info/' + ${list.getEvent_thumbnail()}}" class="img-fluid" alt="">
-									
-										<span class="text-white f12 " th:text="${list.getEvent_name()}"></span>
-									</div>
-									<div class="col">
-										<div class="row">
-											<div class="col">
-												<h5 th:text="${list.getEvent_title()}"></h5>
-											</div>
-										</div>
-										<div class="row">
-											<div class="col-12">
-												<button type="button"
-													class="btn rounded-pill px-3 btn-light f14" th:text="${list.getEvent_area()}"></button>
-												<button type="button"
-													class="btn rounded-pill px-3 btn-light f14" th:text="${list.getEvent_area2()}"></button>
-												<button type="button"
-													class="btn rounded-pill px-3 btn-light f14" th:text="${list.getEvent_category()}">#</button>
-											</div>
-										</div>
-									</div>
-									<div class="col-1 mb-1">
-										<img src="../img/info/btn_dot2.png" alt="">
-									</div>
-								<hr class="mt-3 ms-3">
-									</a>
+						<!--board-->
+						<div class="row " th:each="list:${list}">
+							<a th:href="@{'Event_view?id='+ ${list.getEvent_num()}}"
+								class="row">
+								<div class="col-3 board-left">
+									<img th:src="@{'../img/info/' + ${list.getEvent_thumbnail()}}"
+										class="img-fluid" alt=""> <span class="text-white f12 "
+										th:text="${list.getEvent_name()}"></span>
 								</div>
-								<!--------->
-					
-							</div>
+								<div class="col">
+									<div class="row">
+										<div class="col">
+											<h5>
+												[<span
+													th:text="${list.getEvent_category()}"></span>]
+												<span th:text="${list.getEvent_title()}"></span>
+											</h5>
+										</div>
+									</div>
+									<div class="row">
+										<div class="col-12">
+											<button type="button"
+												class="btn rounded-pill px-3 btn-light f14"
+												th:text="${list.getEvent_area()}"></button>
+											<button type="button"
+												class="btn rounded-pill px-3 btn-light f14"
+												th:text="${list.getEvent_area2()}"></button>
+											<button type="button"
+												class="btn rounded-pill px-3 btn-light f14"
+												th:text="${list.getEvent_category()}">#</button>
+										</div>
+									</div>
+								</div>
+								<div class="col-1 mb-1">
+									<img src="../img/info/btn_dot2.png" alt="">
+								</div>
+								<hr class="mt-3 ms-3">
+							</a>
 						</div>
-									<!------------우측 (필터)------------->
+						<!--------->
+
+					</div>
+				</div>
+				<!------------우측 (필터)------------->
 				<div
-					class="col-12 col-md-5 order-1 order-md-2 bg-light mt-3 p-2 ms-md-2 order-1 rounded-4">
+					class="col-12 col-lg-5 order-1 order-lg-2 bg-light mt-3 p-2 ms-md-2 order-1 rounded-4">
 					<!-- 새로고침 버튼 -->
 					<a href="#" class="btn-refresh ms-auto mt-2 me-2"></a>
 					<div class="row">
 						<div class="col">
 							<hr>
 						</div>
-						<div class="col-12" >
+						<div class="col-12">
 							<button type="button"
 								class="btn rounded-pill px-3 btn-secondary f14"># 전체</button>
-							<button type="button"
-								class="btn rounded-pill px-3 btn-light f14"  th:each = "list:${list}"># 
-								<span th:text="${list.getEvent_area()}"></span>
+							<button type="button" class="btn rounded-pill px-3 btn-light f14"
+								th:each="list:${list}">
+								# <span th:text="${list.getEvent_area()}"></span>
 							</button>
 						</div>
 						<div class="col-11 m-auto">
 							<hr>
 						</div>
 						<div class="col-12">
-							<button type="button" class="btn rounded-pill px-3 btn-secondary f14"># 전체 태그
+							<button type="button"
+								class="btn rounded-pill px-3 btn-secondary f14"># 전체 태그
 							</button>
-						 <button type="button" class="btn rounded-pill px-3 btn-light f14" th:each="tag : ${tags}">
-        #
-        <span th:text="${tag}"></span>
-    </button>
+							<button type="button" class="btn rounded-pill px-3 btn-light f14"
+								th:each="tag : ${tags}">
+								# <span th:text="${tag}"></span>
+							</button>
 						</div>
 					</div>
 				</div>
-					</div>
-				<div class="col-12 text-end mt-3">
-					<a th:href="@{'Event_write_content'}" class="btn btn-main"> 글쓰기</a>
-				</div>
-				</div>
-				
 			</div>
-	
+			<div class="col-12 text-end mt-3">
+				<a th:href="@{'Event_write_content'}" class="btn btn-main"> 글쓰기</a>
+			</div>
+		</div>
+
+	</div>
+
 	<div th:replace="footer/footer::footer"></div>
 
 	<script
