--- a/src/main/resources/templates/thymeleaf/mypage/mypage.html
+++ b/src/main/resources/templates/thymeleaf/mypage/mypage.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/nav.css">
     <link rel="stylesheet" href="../css/mypage.css">
     <link rel="stylesheet" href="../css/swiper.css">
 
@@ -16,7 +17,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </head>
 <body>
-<h1>네비이이이이이이이ㅣㅇ이이이</h1>
+<div th:replace="nav/nav::nav"></div>
 <div id="mypage" class="container mt-5 px-0">
     <div class="row text-center mt-5 m-3 mx-xl-5 d-flex justify-content-between">
         <!-- <<<<<<<<<<<<<<< (좌) <<<<<<<<<<<<<<<< -->
@@ -24,11 +25,11 @@
             <!-- [<] 내정보란 -->
             <div class="row bg-light border rounded-4 p-5 px-md-3 px-xl-4">
                 <div class="col-12">
-                    <img src="../img/mypage/user_rabbit.jpg" class="w-25 rounded-circle img-fluid"
+                    <img th:src="@{'../img/member_thumbnail/'+ ${session.Member_profileimage}}" class="w-25 rounded-circle img-fluid"
                          alt="...">
                 </div>
                 <div class="col-12 p-3 mb-4">
-                    <p class="f22"><span class="fw-bold">톢이</span> 님</p>
+                    <p class="f22"><span th:text="${session.Member_Name}">사용자이름</span> 님</p>
                     <a href="#" class="text-dark d-block p-3">
                         <button type="button" class="btn btn-outline-dark rounded-pill">내 정보 수정 ></button>
                     </a>
